uFlex Changelog

v0.94 5/15/2013
	- Added a magic clone method to clean the cloned object
	- Deprecated the updater script.

v0.93   2/24/2013
	- Updated private methods to protected

v0.91	2/17/2013
	- Overhaul of inline documentation
	- Made the ->session method public
	- Enhanced the ->logout method

v0.88	7/23/2012
	- Fixed an autologin cookie bug where user could not be logged out in PHP 5.4.x
	
v0.87	7/22/2012
	- Patched some security bugs

v0.86	6/15/2012
	- Constant ::debug deprecated, not really needed
	- Implemented a stronger and more complex user authentication algorithm. It is fully backwards compatible, users will be migrated to the new algorithm as they login.
	- Ported the class to use PDO instead of the outdated mysql_* lib.
	- The class now handles its own database link so a connection is stablished only when needed.
	- Addded the $db variable to hold the database credentials.
	- Added the ability to delay/stop object construction so that options could be configured outside the class file before it starts.
	- new ->start() method allows you to start a delayed object construction so that you can customize any class option without having to edit the class file itselft.
	- MIT lincense upgrade, is more flexible so it should not be a problem with existing applications

v0.75	11/26/2011
	- Revamped Demo, new look and best PHP practices
	- New ->login() method to initiate a login request anytime
	- Wrapped session_start() into smart conditions, eliminating all warnings and logging session_start() status
	- Replace all PHP short tags project wide
	- some internal code refactoring(new private ->session())
	
v0.61	5/18/2011
	- Fixed inline Grammar thoughtout the class.uFlex.php file
	- Included an installable 'demo'
	
v0.57	5/5/2011
	- Fixed fields not been able to be optional
	
v0.56	3/11/2011
	- Import default profile Guess when user is logout
	- Add $Name to hold ucfirst() version of $name in private ->validate()